--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ fastapi[standard]==0.115.12
 sqlalchemy==2.0.40
 passlib==1.7.4
 psycopg2==2.9.10
+pytest==8.3.5
+pytest-asyncio==1.0.0
 pydantic_settings==2.9.1
 PyJWT==2.10.1
 redis==6.1.0
