--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ JWT_ALGORITHM=""
 JWT_ACCESS_TOKEN_EXPIRES_MINUTES=
 JWT_REFRESH_TOKEN_EXPIRES_DAYS=
 
-CURRENCY_API_URL=
+CURRENCY_API_URL="https://api.coinlore.net/api/"
